Updated for 1.0.5 build

--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -25,7 +25,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CredPackAuthenticationBufferA, CredPackAuthenticationBufferW, CredUIConfirmCredentialsA, CredUIConfirmCredentialsW, CredUIParseUserNameA, CredUIParseUserNameW, CredUIPromptForCredentialsA, CredUIPromptForCredentialsW, CredUIPromptForWindowsCredentialsA, CredUIPromptForWindowsCredentialsW, CredUnPackAuthenticationBufferA, CredUnPackAuthenticationBufferW
+CredPackAuthenticationBufferA, CredPackAuthenticationBufferW, CredUICmdLinePromptForCredentialsA, CredUICmdLinePromptForCredentialsW, CredUIConfirmCredentialsA, CredUIConfirmCredentialsW, CredUIParseUserNameA, CredUIParseUserNameW, CredUIPromptForCredentialsA, CredUIPromptForCredentialsW, CredUIPromptForWindowsCredentialsA, CredUIPromptForWindowsCredentialsW, CredUIReadSSOCredA, CredUIReadSSOCredW, CredUIStoreSSOCredA, CredUIStoreSSOCredW, CredUnPackAuthenticationBufferA, CredUnPackAuthenticationBufferW, XCredUIStoreSSOCredA, XCredUIStoreSSOCredW
 
 Structures
 CREDUI_INFO
