--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -28,7 +28,7 @@ Functions
 BitBlt, CreateCompatibleDC, CreateDIBSection, DeleteDC, DeleteObject, GdiAlphaBlend, GdiFlush, GdiTransparentBlt, GetDIBits, GetObjectA, GetObjectW, SelectObject, SetBkMode, SetLayout
 
 Structures
-BITMAPINFO, BITMAPINFOHEADER, RGBQUAD, BLENDFUNCTION, LOGFONT
+BITMAPINFO, BITMAPINFOHEADER, RGBQUAD, BLENDFUNCTION, COLORREF, LOGFONT, TEXTMETRIC
 
 </PackageReleaseNotes>
   </PropertyGroup>
