--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -115,6 +115,8 @@
     <Compile Include="PInvoke\WinInet\WinInetTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\AccessControl\SystemSecurityTests.cs" />
+    <Compile Include="Shell\ShellItemTests.cs" />
+    <Compile Include="Shell\ShellFolderTests.cs" />
     <Compile Include="System\VirtualDiskTests.cs" />
     <Compile Include="UI\Controls\CredentialsDialogTests.cs" />
   </ItemGroup>
