Updated projects for 1.0.7 build.

--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from ComCtl32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.6</VersionPrefix>
+    <VersionPrefix>1.0.7</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.ComCtl32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -28,7 +28,7 @@ Functions
 ImageList_DrawEx, ImageList_GetIcon, ImageList_SetOverlayImage, InitCommonControlsEx, PropertySheetA, PropertySheetW, SendMessageA, SendMessageW, TaskDialog, TaskDialogIndirect
 
 Structures
-BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, EDITBALLOONTIP, HDHITTESTINFO, HDITEM, HDLAYOUT, HDTEXTFILTER, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB
+BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, EDITBALLOONTIP, HDHITTESTINFO, HDITEM, HDLAYOUT, HDTEXTFILTER, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, TBBUTTON, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB
 
 Interfaces
 IImageList
