--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from Gdi32.dll</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.6</VersionPrefix>
+    <VersionPrefix>1.0.7</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Gdi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -28,7 +28,7 @@ Functions
 BitBlt, CreateCompatibleDC, CreateDIBSection, DeleteDC, DeleteObject, GdiAlphaBlend, GdiFlush, GdiTransparentBlt, GetDIBits, GetObjectA, GetObjectW, SelectObject, SetBkMode, SetLayout
 
 Structures
-BITMAPINFO, BITMAPINFOHEADER, RGBQUAD, BLENDFUNCTION, COLORREF, LOGFONT, TEXTMETRIC
+BITMAP, BITMAPINFO, BITMAPINFOHEADER, DIBSECTION, RGBQUAD, BLENDFUNCTION, COLORREF, LOGFONT, TEXTMETRIC
 
 </PackageReleaseNotes>
   </PropertyGroup>
