--- a/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
+++ b/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from Shell32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.6</VersionPrefix>
+    <VersionPrefix>1.0.7</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Shell32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -25,13 +25,13 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-ExtractIconExA, ExtractIconExW, GetCurrentProcessExplicitAppUserModelID, ILClone, ILCloneFirst, ILCombine, ILCreateFromPath, ILCreateFromPathA, ILCreateFromPathW, ILFindLastID, ILGetNext, ILGetSize, ILIsEqual, ILIsParent, ILRemoveLastID, SetCurrentProcessExplicitAppUserModelID, SHAddToRecentDocs, SHBrowseForFolderA, SHBrowseForFolderW, SHCreateItemFromIDList, SHCreateItemFromParsingName, SHCreateItemFromRelativeName, SHCreateItemInKnownFolder, SHCreateItemWithParent, SHCreateShellItemArray, SHCreateShellItemArrayFromIDLists, SHCreateShellItemArrayFromShellItem, SHDefExtractIconA, SHDefExtractIconW, ShellExecuteExA, ShellExecuteExW, SHGetDataFromIDListA, SHGetDataFromIDListW, SHGetDesktopFolder, SHGetFileInfoA, SHGetFileInfoW, SHGetFolderLocation, SHGetFolderPathA, SHGetFolderPathEx, SHGetFolderPathW, SHGetIDListFromObject, SHGetImageList, SHGetKnownFolderIDList, SHGetKnownFolderItem, SHGetKnownFolderPath, SHGetNameFromIDList, SHGetPathFromIDListA, SHGetPathFromIDListW, SHGetPropertyStoreFromParsingName, SHOpenFolderAndSelectItems, SHParseDisplayName
+ExtractIconExA, ExtractIconExW, GetCurrentProcessExplicitAppUserModelID, ILClone, ILCloneFirst, ILCombine, ILCreateFromPathA, ILCreateFromPathW, ILFindLastID, ILFree, ILGetNext, ILGetSize, ILIsEqual, ILIsParent, ILRemoveLastID, SetCurrentProcessExplicitAppUserModelID, SHAddToRecentDocs, SHBrowseForFolderA, SHBrowseForFolderW, SHCreateItemFromIDList, SHCreateItemFromParsingName, SHCreateItemFromRelativeName, SHCreateItemInKnownFolder, SHCreateItemWithParent, SHCreateShellItemArray, SHCreateShellItemArrayFromIDLists, SHCreateShellItemArrayFromShellItem, SHDefExtractIconA, SHDefExtractIconW, ShellExecuteExA, ShellExecuteExW, SHGetDataFromIDListA, SHGetDataFromIDListW, SHGetDesktopFolder, SHGetFileInfoA, SHGetFileInfoW, SHGetFolderLocation, SHGetFolderPathA, SHGetFolderPathEx, SHGetFolderPathW, SHGetIDListFromObject, SHGetImageList, SHGetKnownFolderIDList, SHGetKnownFolderItem, SHGetKnownFolderPath, SHGetNameFromIDList, SHGetPathFromIDListA, SHGetPathFromIDListW, SHGetPropertyStoreFromParsingName, SHOpenFolderAndSelectItems, SHParseDisplayName, SHResolveLibrary, SHShowManageLibraryUI
 
 Structures
-SHELLEXECUTEINFO, SHFILEINFO, BROWSEINFO, COORD, DATABLOCKHEADER, EXP_DARWIN_LINK, EXP_SPECIAL_FOLDER, EXP_SZ_LINK, NT_CONSOLE_PROPS, NT_FE_CONSOLE_PROPS, SHDESCRIPTIONID, KNOWNFOLDER_DEFINITION, THUMBBUTTON, COMDLG_FILTERSPEC, ITEMIDLIST, SHITEMID
+SHELLEXECUTEINFO, SHFILEINFO, BROWSEINFO, COORD, DATABLOCKHEADER, EXP_DARWIN_LINK, EXP_SPECIAL_FOLDER, EXP_SZ_LINK, NT_CONSOLE_PROPS, NT_FE_CONSOLE_PROPS, SHDESCRIPTIONID, OLEMENUGROUPWIDTHS, COMDLG_FILTERSPEC, KNOWNFOLDER_DEFINITION, EXTRASEARCH, FOLDERSETTINGS, SV2CVW2_PARAMS, THUMBBUTTON, ITEMIDLIST, SHITEMID
 
 Interfaces
-IApplicationDestinations, IApplicationDocumentLists, ICustomDestinationList, IEnumIDList, IEnumShellItems, IFileDialog, IFileDialogEvents, IFileOpenDialog, IFileOperationProgressSink, IFileSaveDialog, IKnownFolder, IKnownFolderManager, IModalWindow, IObjectArray, IObjectCollection, IObjectWithAppUserModelId, IObjectWithProgId, IQueryInfo, IShellFolder, IShellItem, IShellItem2, IShellItemArray, IShellLinkDataList, IShellLinkW, ITaskbarList, ITaskbarList2, ITaskbarList3, ITaskbarList4
+IExtractIcon, IApplicationDestinations, IApplicationDocumentLists, IEnumIDList, IEnumShellItems, IObjectArray, IObjectCollection, IObjectWithAppUserModelId, IObjectWithProgId, IQueryInfo, IExtractImage, IFileDialog, IFileDialogEvents, IFileOpenDialog, IFileOperationProgressSink, IFileSaveDialog, IModalWindow, IKnownFolder, IKnownFolderManager, IEnumExtraSearch, IShellFolder, IShellFolder2, IShellItem, IShellItem2, IShellItemArray, IShellItemImageFactory, IShellLibrary, IShellLinkDataList, IShellLinkW, IShellBrowser, IShellView, IShellView2, IShellView3, ICustomDestinationList, ITaskbarList, ITaskbarList2, ITaskbarList3, ITaskbarList4, IThumbnailProvider
 
 </PackageReleaseNotes>
   </PropertyGroup>
