Added missing Sspi methods from CredUI

--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -51,6 +51,7 @@ CREDUI_INFO
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
+    <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
